2011-05-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	* info-look.el: Convert to lexical-binding and completion-at-point.
	(info-lookup-completions-at-point): New function.
	(info-complete): Use it and completion-in-region.

2011-05-28  Drew Adams  <drew.adams@oracle.com>

	* isearch.el: Let M-e start with point at the first mismatched char.
	(isearch-fail-pos): New function.
	(isearch-edit-string): Use it.

2011-05-28  Dmitry Kurochkin  <dmitry.kurochkin@gmail.com>  (tiny change)

	* isearch.el (isearch-range-invisible): Use invisible-p (bug#8721).

2009-11-23  Toby Cubitt  <toby-predictive@dr-qubit.org>

	* emacs-lisp/avl-tree.el: New avl-tree-stack datatype.  Add new
	traversal functions for avl-trees.
	(avl-tree--stack): New struct.
	(avl-tree-stack-p, avl-tree--stack-repopulate): New funs.
	(avl-tree-enter): Add optional `updatefun' arg.
	(avl-tree--do-enter): Add optional `updatefun' arg.
	Change return value.
	(avl-tree-delete): Add optional `test' and `nilflag' args.
	(avl-tree--do-delete): Add `test' and `nilflag' args.
	Change return value.
	(avl-tree-member): Add optional `nilflag'
	(avl-tree-member-p): New function.
	(avl-tree-mapc, avl-tree-mapf, avl-tree-mapcar): New functions.
	(avl-tree-stack, avl-tree-stack-pop, avl-tree-stack-first)
	(avl-tree-stack-empty-p): New functions.

2009-11-23  Toby Cubitt  <toby-predictive@dr-qubit.org>

	* emacs-lisp/avl-tree.el (avl-tree--del-balance): Rename from
	avl-tree--del-balance1 and make it work both ways.
	(avl-tree--del-balance2): Remove.
	(avl-tree--enter-balance): Rename from avl-tree--enter-balance1 and
	make it work both ways.
	(avl-tree--enter-balance2): Remove.
	(avl-tree--switch-dir, avl-tree--dir-to-sign, avl-tree--sign-to-dir):
	New macros.
	(avl-tree--mapc, avl-tree-map): Add direction argument.

2011-05-27  David Michael  <fedora.dm0@gmail.com>  (tiny change)

	* files.el (interpreter-mode-alist): Add rbash (bug#8745).

2011-05-27  Chong Yidong  <cyd@stupidchicken.com>
